https://github.com/abrahammate/Szamitogep-neme.git

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <h3> Első <span> szép </span> fejléc </h3>
     <h4> Első <span> szép </span> fejléc </h4>
     <h5> Első <span> szép </span> fejléc </h5>
-    <h6> Első <span> szép </span> fejléc </h6>
+    <h6> Első <span> szép </
+    span> fejléc </h6>
 
     <p> első paragrafus </p>
 </body>
